<resources>
    <string name="app_name">Rumeet</string>
    <string name="title_dialog">알림 메시지</string>
    <string name="content_loading">러밋으로 러닝 메이트를\n만들어보세요 :)</string>
    <string name="category_chatting">채팅</string>
    <string name="category_my_page">마이페이지</string>
    <string name="content_auto_login">자동 로그인</string>
    <string name="content_find_account">내 계정 찾기</string>
    <string name="content_kakao_login">카카오로 시작하기</string>
    <string name="content_naver_login">네이버로 시작하기</string>
    <string name="content_join_title">아직 회원이 아니신가요?</string>
    <string name="content_join">회원가입</string>
    <string name="content_login">로그인</string>
    <string name="title_join">러밋과 함께\n뛰어볼까요?</string>
    <string name="title_id_input">사용하실 아이디를 입력해주세요 :)</string>
    <string name="content_duplicated_id">이미 사용중인 아이디 입니다</string>
    <string name="content_id_email_error">이메일 형식에 맞춰주세요</string>
    <string name="content_nickname_hint">사용하실 닉네임을 입력해주세요 :)</string>
    <string name="content_duplicated_nickname">이미 사용중인 닉네임 입니다</string>
    <string name="content_nickname_size_error">닉네임은 최대 10글자까지 가능합니다</string>
    <string name="content_nickname_size_min_error">닉네임은 최소 2글자 작성해주세요</string>
    <string name="content_agree_app_terms_of_uses">계속하기를 누른다면 이용약관 동의로 간주합니다</string>
    <string name="content_password_hint">영어, 숫자, 특수문자를 활용한 8글자 이상</string>
    <string name="content_password_check_hint">위의 비밀번호를 다시 입력해주세요</string>
    <string name="content_password_validate_error">영어, 숫자, 특수문자를 8글자 입력해주세요</string>
    <string name="content_password_validate_pass">사용가능한 비밀번호 입니다:)</string>
    <string name="content_password_check_error">두 비밀번호가 다릅니다. 확인해 보시겠어요?</string>
    <string name="content_password_check">비밀번호가 일치합니다.</string>
    <string name="content_password_title">비밀번호 입력</string>
    <string name="content_password_check_title">비밀번호 확인</string>
    <string name="title_join_additional">나만의 러닝메이트\n러밋에서 만나봐요</string>
    <string name="content_join_additional_description">입력하신 정보에 따라 러닝메이트가 추천돼요</string>
    <string name="title_gender">성별</string>
    <string name="title_body_state">키 / 몸무게</string>
    <string name="category_male">남</string>
    <string name="category_female">여</string>
    <string name="content_body_state_hint">키와 몸무게를 입력해주세요</string>
    <string name="title_birth">나이</string>
    <string name="content_birth_hint">나이를 입력해주세요.</string>
    <string name="content_sign_up">러밋하러 가기</string>
    <string name="content_tall">cm</string>
    <string name="content_weight">kg</string>
    <string name="content_okay">확인</string>
    <string name="title_password_validate">비밀번호는 영어, 숫자, 특수문자\n8글자 이상 입력해주세요.</string>
    <string name="title_reset_password">비밀번호 재설정</string>
    <string name="title_reset_password_description">새로운 비밀번호를 입력해주세요.</string>
    <string name="content_welcome_message">%1$s님!\n오늘도 열심히 달려볼까요?</string>
    <string name="title_best_record">나의 누적 기록</string>
    <string name="title_distance">누적 거리</string>
    <string name="title_running_time">누적 횟수</string>
    <string name="title_pace">평균 페이스</string>
    <string name="title_calorie">칼로리</string>
    <string name="content_distance">%1$dkm</string>
    <string name="content_calorie">$1%dkcal</string>
    <string name="title_my_badge">나의 뱃지</string>
    <string name="title_see_more">더보기  </string>
    <string name="title_recommend_random_friend">비슷한 페이스! 같이 뛰어요!</string>
    <string name="content_see_friend_info_detail">친구 보기</string>
    <string name="title_refresh">다시 찾기  </string>
    <string name="content_no_best_record">입력된 체력 데이터가 없습니다.</string>
    <string name="content_no_badge">아직 획득한 뱃지가 없어요 :(\n싱글 모드 달리기를 하면\nWelcome뱃지를 받을 수 있어요!</string>
    <string name="content_no_pace">아직 페이스가 입력되지 않았아요\n열심히 달려서 비슷한\n체력의 친구를 추천 받아보세요!</string>
    <string name="title_find_account">내 계정 찾기</string>
    <string name="content_find_account_description">고객님의 정보를 입력해주세요</string>
    <string name="title_find_account_id_input">아이디 입력</string>
    <string name="content_authentication_code_hint">인증번호 입력</string>
    <string name="content_request_authentication_code">인증요청</string>
    <string name="content_authentication_code">인증번호 확인</string>
    <string name="content_check_id">아이디를 확인해주세요</string>
    <string name="content_time_limit">이내에 인증을 완료해주세요</string>
    <string name="content_check_authentication_code">인증번호를 확인해주세요</string>
    <string name="content_time_out">시간이 만료되었습니다\n인증요청을 다시해주세요</string>
    <string name="title_friend_list">목록</string>
    <string name="content_all_friend">전체 친구</string>
    <string name="content_recently_run_friend">최근에 같이 뛴 친구</string>
    <string name="content_search_friend_hint">친구를 검색해보세요</string>
    <string name="content_run_together_friend">함께 많이 달린 친구</string>
    <string name="title_friend_dialog">친구 보기</string>
    <string name="content_average_pace">평균 페이스</string>
    <string name="content_friend_distance">거리</string>
    <string name="content_friend_time">시간</string>
    <string name="content_friend_pace">페이스</string>
    <string name="content_friend_calorie">칼로리</string>
    <string name="content_friend_add_hint">친구의 닉네임을 입력해보세요</string>
    <string name="content_option_competition">경쟁 모드</string>
    <string name="content_option_team_play">협동 모드</string>
    <string name="content_option_relay">이어달리기</string>
    <string name="title_option_distance">얼마나 달려볼까요?</string>
    <string name="title_option_with">누구와 달려볼까요?</string>
    <string name="title_option_difficulty">난이도를 선택해주세요</string>
    <string name="content_option_with_friend">친구</string>
    <string name="content_option_with_me">나</string>
    <string name="content_option_with_random">랜덤</string>
    <string name="content_option_difficulty_easy">EASY</string>
    <string name="content_option_difficulty_normal">NORMAL</string>
    <string name="content_option_difficulty_hard">hard</string>
    <string name="content_message_selected_random">랜덤 매칭 실패 시 고스트 모드로 자동 전환됩니다.</string>
    <string name="content_message_selected_friend">운동 시작 후 함께할 친구를 선택할 수 있습니다.</string>
    <string name="content_btn_start_running">운동 시작</string>
    <string name="title_running_total_time">운동 시간</string>
    <string name="title_running_height">고도</string>
    <string name="title_running_heartbeat">평균 심박수</string>
    <string name="content_btn_reject">거절</string>
    <string name="content_btn_accept">수락</string>
    <string name="title_request_friend">친구 요청</string>
    <string name="title_request_running">러닝 요청</string>
    <string-array name="title_setting_content">
        <item>내 계정</item>
        <item>알림 설정</item>
        <item>버전 정보</item>
        <item>개인정보 수집 및 이용 설정</item>
        <item>서비스 이용 약관</item>
    </string-array>
    <string-array name="title_user_info_content">
        <item>이메일</item>
        <item>닉네임</item>
        <item>나이</item>
        <item>성별</item>
        <item>신장/체중</item>
        <item>부가정보 수정</item>
        <item>비밀번호 재설정</item>
        <item>회원탈퇴</item>
    </string-array>
    <string name="content_confirm_password">현재 비밀번호를 입력해주세요.</string>
    <string name="title_withdrawal">러밋을 이용해주셔서 감사합니다.</string>
    <string name="content_withdrawal_message">서비스에 만족을 드리지 못해 대단히 죄송합니다.\n탈퇴 사유를 남겨주시면 서비스 개선에 힘쓰겠습니다.</string>
    <string name="content_withdrawal_select_reason">탈퇴 사유를 선택해주세요.</string>
    <string-array name="content_withdrawal_reason">
        <item>기록 삭제 목적</item>
        <item>이용이 불편하고 에러가 많아서</item>
        <item>신뢰도가 떨어져서</item>
        <item>운동 능력 향상에 효과가 없어서</item>
        <item>다른 플랫폼을 이용해서</item>
        <item>사용 빈도가 낮아서</item>
        <item>알림이 너무 자주 울려서</item>
        <item>기타</item>
    </string-array>
    <string name="content_withdrawal_message_bottom">- 러닝 기록을 포함하여 이용하신 모든 데이터가 삭제됩니다.\n- 현재 계정으로 다시 로그인할 수 없습니다.</string>
    <string name="content_withdrawal_result_title">회원 탈퇴가 완료되었습니다.</string>
    <string name="content_withdrawal_result_message">러밋을 이용해주셔서 감사합니다.\n더욱 노력하고 발전하는 러밋이 되겠습니다.</string>
    <string name="content_result_withdrawal_btn">로그인 화면으로 돌아가기</string>
    <string name="content_mypage_message_top">힘차게 러밋!</string>
    <string name="content_mypage_message_include_name">%1$s님!\n오늘도 열심히 달려볼까요?</string>
    <string-array name="title_mypage_menu">
        <item>운동기록</item>
        <item>매칭기록</item>
        <item>친구</item>
        <item>뱃지</item>
        <item>프로필 수정</item>
        <item>설정</item>
        <item>로그아웃</item>
    </string-array>
    <string name="content_running_record_option_week">이번 주</string>
    <string name="content_running_record_option_month">이번 달</string>
    <string name="content_running_record_option_year">올 해</string>
    <string name="content_running_record_option_all">전체</string>
    <string name="title_mode_ghost">고스트 모드</string>
    <string name="title_mode_competition">경쟁 모드</string>
    <string name="title_mode_team">협동 모드</string>
    <string name="title_badge_recent">최근 획득한 뱃지</string>
    <string name="title_badge_welcome">만나서 반가워요!</string>
    <string name="title_badge_distance">오늘도 러밋!\n힘차게 뛰어볼까요?</string>
    <string name="title_badge_time">성장하는 러닝 실력!\n더 오래 달려봐요!</string>
    <string name="title_badge_competition">나만의 러닝 메이트\n함께 뛰어봐요!</string>
    <string name="title_badge_team">상어를 피해\n끝까지 달려봐요!</string>
    <string name="title_badge_relay">이어달리기로 즐기는 인터벌!</string>
</resources>