<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.d204.rumeet.ui.join.JoinViewModel" />

        <variable
            name="socialType"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_additional_info_title"
            style="@style/base_font_bold_22_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/base_horizontal_margin"
            android:text="@string/title_join_additional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_additional_info_description"
            style="@style/base_font_medium_14_nobel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="18dp"
            android:text="@string/content_join_additional_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_additional_info_title" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/base_font_bold_16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="48dp"
            android:text="@string/title_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_additional_info_description" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_rect_navyblue_tranparent_round8_stroke1"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender">

            <RadioButton
                android:id="@+id/btn_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sc_left_check_box_background"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/category_male"
                android:textColor="@color/sc_checked_color_white_black" />

            <RadioButton
                android:id="@+id/btn_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sc_right_check_box_background"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/notosanskr_bold"
                android:gravity="center"
                android:text="@string/category_female"
                android:textColor="@color/sc_checked_color_white_black" />
        </RadioGroup>

        <View
            android:id="@+id/div_gender"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/navy_blue"
            app:layout_constraintBottom_toBottomOf="@id/rg_gender"
            app:layout_constraintEnd_toEndOf="@id/rg_gender"
            app:layout_constraintStart_toStartOf="@id/rg_gender"
            app:layout_constraintTop_toTopOf="@id/rg_gender" />

        <TextView
            android:id="@+id/tv_body_state_title"
            style="@style/base_font_bold_16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="39dp"
            android:text="@string/title_body_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender" />

        <TextView
            android:id="@+id/tv_body_state"
            style="@style/base_font_medium_14_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_rect_light_grey_transparent_round8_stroke1"
            android:hint="@string/content_body_state_hint"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_body_state_title" />

        <TextView
            android:id="@+id/tv_birth_title"
            style="@style/base_font_bold_16_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_horizontal_margin"
            android:layout_marginTop="39dp"
            android:text="@string/title_birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_body_state" />

        <EditText
            android:id="@+id/edit_birth"
            style="@style/base_font_medium_14_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_rect_light_grey_transparent_round8_stroke1"
            android:hint="@string/content_birth_hint"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_title" />


        <com.d204.rumeet.ui.components.SingleButton
            android:id="@+id/btn_rumeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/base_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/base_horizontal_margin"
            app:onSingleButtonClick="@{() -> vm.signUp(socialType)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>